--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -56,19 +56,19 @@
       </div>
       <nav
         :class="{'flex': open, 'hidden': !open}"
-        class="flex-col items-center flex-grow hidden md:pb-0 md:flex md:justify-end md:flex-row"
+        class="flex-col items-center flex-grow gap-3 hidden md:pb-0 md:flex md:justify-end md:flex-row"
       >
         <a
-          class="px-2 lg:px-6 py-2 md:px-3 text-sm font-medium text-black hover:text-accent-600 lg:ml-auto"
+          class=" text-sm font-medium text-black hover:text-accent-600 lg:ml-auto"
           href="/#features">Features</a
         >
         <a
-          class="px-2 lg:px-6 py-2 md:px-3 text-sm font-medium text-black hover:text-accent-600"
+          class=" text-sm font-medium text-black hover:text-accent-600"
           href="/#pricing">Pricing</a
         >
 
         <a
-          class="px-2 lg:px-6 py-2 md:px-3 text-sm font-medium text-black hover:text-accent-600"
+          class=" text-sm font-medium text-black hover:text-accent-600"
           href="/faq"
         >
           Faq</a
