--- a/src/components/landing/SectionOne.astro
+++ b/src/components/landing/SectionOne.astro
@@ -1,4 +1,4 @@
-<section>
+<section id="features">
   <div class="px-8 py-20 mx-auto md:px-12 lg:px-24 max-w-7xl ">
     <div class="text-center max-w-2xl mx-auto lg:text-balance">
       <p class="text-sm leading-normal font-bold uppercase text-accent-600">
