--- a/src/components/global/Testimonial.astro
+++ b/src/components/global/Testimonial.astro
@@ -5,23 +5,22 @@
         <blockquote
           class="text-2xl leading-tight tracking-tight sm:text-3xl md:text-4xl lg:text-5xl text-base-900 italic font-medium"
         >
-          "Being in the financial industry, we were always looking for ways to
-          enhance our transactions' security and efficiency."
+          "Our customer service team was overwhelmed with product questions. Now our AI assistant handles them 24/7, and we've seen a 40% increase in sales conversion."
         </blockquote>
       </div>
       <figcaption class="flex text-left justify-center mt-8">
         <div class="flex items-center gap-4">
           <img
             class="object-cover rounded-full size-12"
-            src="https://oxbowui.com/avatars/1.jpg"
+            src="/images/person.png"
             alt="#_"
           />
           <div>
             <h3 class="text-base leading-normal text-base-900 font-medium">
-              Fernando Monte
+              Vikram Shah
             </h3>
             <p class="text-xs leading-normal text-base-400 font-medium">
-              Designer
+              Ecommerce Director
             </p>
           </div>
         </div>
