domain name change

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -6,7 +6,7 @@ import "../styles/global.css";
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <!-- Basic Meta Tags -->
-<title>AskReviews.ai - AI Chatbot for Ecommerce Product Pages</title>
+<title>ProductGenie - AI Chatbot for Ecommerce Product Pages</title>
 <meta
   name="description"
   content="Add an AI chatbot to your ecommerce product pages. Get customer insights and boost sales with intelligent product assistance."
@@ -15,7 +15,7 @@ import "../styles/global.css";
   name="keywords"
   content="ecommerce chatbot, product ai, customer service ai, product page optimization"
 />
-<meta name="author" content="AskReviews.ai" />
+<meta name="author" content="productgenie.ai" />
 
 <!-- Favicons -->
 <link rel="icon" href="/favicon.ico" sizes="any" />
@@ -36,7 +36,7 @@ import "../styles/global.css";
 <meta property="og:url" content="https://www.yourwebsite.com/" />
 <meta
   property="og:title"
-  content="AskReviews.ai - AI Chatbot for Ecommerce Product Pages"
+  content="ProductGenie - AI Chatbot for Ecommerce Product Pages"
 />
 <meta
   property="og:description"
@@ -52,7 +52,7 @@ import "../styles/global.css";
 <meta property="twitter:url" content="https://www.yourwebsite.com/" />
 <meta
   property="twitter:title"
-  content="AskReviews.ai - AI Chatbot for Ecommerce Product Pages"
+  content="ProductGenie - AI Chatbot for Ecommerce Product Pages"
 />
 <meta
   property="twitter:description"
