--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -2,11 +2,13 @@
 const featuresList = [
   {
     title: "Question Limits",
-    description: "Choose from 10k, 50k, or 100k questions per month based on your needs.",
+    description:
+      "Choose from 10k, 50k, or 100k questions per month based on your needs.",
   },
   {
     title: "Analytics Dashboard",
-    description: "Track usage and gain insights with our Pro and Business plans.",
+    description:
+      "Track usage and gain insights with our Pro and Business plans.",
   },
   {
     title: "Website Integration",
@@ -27,7 +29,8 @@ const featuresList = [
         Add an AI Chatbot to Every Product Page
       </h2>
       <p class="text-base leading-normal mt-4 text-base-500 font-medium">
-        Help customers make confident buying decisions with an AI chatbot that knows your products inside and out.
+        Help customers make confident buying decisions with an AI chatbot that
+        knows your products inside and out.
       </p>
       <div
         class="flex flex-wrap items-center gap-2 justify-center mx-auto mt-12"
@@ -59,7 +62,7 @@ const featuresList = [
     </dl>
     <div class="relative w-full mx-auto max-w-7xl items-center py-12 pb-12">
       <img
-        alt="AskReviews.ai Dashboard"
+        alt="ProductGenie Dashboard"
         class="relative w-full ring-4 ring-base-50 border border-base-200 lg:rounded-2xl object-cover rounded"
         src="/images/dashboard-flow.gif"
       />
