--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -42,7 +42,7 @@
       </div>
       <nav
         :class="{'flex': open, 'hidden': !open}"
-        class="flex-col items-center flex-grow gap-3 hidden md:pb-0 md:flex md:justify-end md:flex-row"
+        class="flex-col items-center flex-grow gap-4 hidden md:pb-0 md:flex md:justify-end md:flex-row"
       >
         <a
           class="text-sm font-medium text-black hover:text-accent-600 lg:ml-auto"
@@ -57,7 +57,7 @@
           href="/faq">Faq</a
         >
 
-        <div class="inline-flex items-center gap-2 list-none lg:ml-auto">
+        <div class="inline-flex items-center gap-2 list-none lg:ml-6">
           <a
             href="https://app.productgenie.io"
             class="flex items-center justify-center transition-all duration-200 focus:ring-2 focus:outline-none text-white bg-accent-600 hover:bg-accent-700 focus:ring-accent-500/50 h-9 px-6 py-2 text-sm font-medium rounded-md"
