--- a/src/components/global/Footer.astro
+++ b/src/components/global/Footer.astro
@@ -36,18 +36,17 @@ const sections = [
 ---
 
 <footer>
-  <div class="px-8 py-20 mx-auto md:px-12 lg:px-24 max-w-7xl">
+  <div class="px-8 py-12 mx-auto md:px-12 lg:px-24 max-w-7xl">
     <div class="grid grid-cols-2 lg:grid-cols-4 items-start gap-x-8 gap-y-24">
       <a
         href="/"
         class="xl:col-span-1 text-black inline-flex items-center gap-3"
       >
         <img
-          src="/images/logo.png"
+          src="/images/product-genie-logo.png"
           alt="ProductGenie Logo"
-          class="h-8 w-auto"
+          class="h-12 w-auto"
         />
-        <span class="font-bold font-display">ProductGenie</span>
       </a>
       <div
         class="md:grid md:grid-cols-2 xl:grid-cols-4 md:gap-8 text-sm leading-normal text-base-500 font-medium lg:col-span-3"
