--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -2,16 +2,15 @@
   <div class="w-full mx-auto md:px-12 px-8 max-w-7xl lg:px-16">
     <div
       x-data="{ open: false }"
-      class="relative flex flex-col w-full py-5 mx-auto bg-white md:items-center md:justify-between md:flex-row md:px-6"
+      class="relative flex flex-col w-full py-3 mx-auto bg-white md:items-center md:justify-between md:flex-row md:px-6"
     >
       <div class="flex flex-row items-center justify-between lg:justify-start">
         <a href="/" class="text-black inline-flex items-center gap-3">
           <img
-            src="/images/logo.png"
+            src="/images/product-genie-logo.png"
             alt="ProductGenie Logo"
-            class="h-8 w-auto"
+            class="h-12 w-auto"
           />
-          <span class="font-bold font-display">ProductGenie</span>
         </a>
         <button
           @click="open = !open"
