--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -46,15 +46,19 @@ const featuresList = [
       <h2
         class="text-2xl leading-tight tracking-tight sm:text-3xl md:text-4xl lg:text-5xl xl:text-6xl mt-16 font-semibold text-base-900"
       >
-        Add an <span class="text-accent-600">AI Assistant</span> to Every <span
-          class="text-accent-600">Product Page</span
+        Add an <span
+          class="bg-gradient-to-br from-blue-700 via-blue-500 to-accent-500 text-transparent bg-clip-text animate-gradient bg-300% font-bold"
+          >AI Expert Assistant</span
+        > to Every <span
+          class="bg-gradient-to-br from-blue-700 via-blue-500 to-accent-500 text-transparent bg-clip-text animate-gradient bg-300% font-bold"
+          >Product Page</span
         >
       </h2>
       <p
         class="text-lg sm:text-xl leading-relaxed mt-8 text-base-500 font-medium max-w-2xl mx-auto"
       >
         Help customers make confident buying decisions with an AI assistant that
-        knows your products inside and out.
+        knows your products inside and out. Get valuable customer insights.
       </p>
       <div
         class="flex flex-wrap items-center gap-3 justify-center mx-auto mt-12"
