--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -43,3 +43,17 @@
     font-family: InterVariable, sans-serif;
   }
 }
+
+@keyframes gradient {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
+}
+
+.animate-gradient {
+  animation: gradient 6s ease infinite;
+}
+
+.bg-300\% {
+  background-size: 300% 300%;
+}
