--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -47,10 +47,10 @@ const featuresList = [
         class="text-2xl leading-tight tracking-tight sm:text-3xl md:text-4xl lg:text-5xl xl:text-6xl mt-16 font-semibold text-base-900"
       >
         Add an <span
-          class="bg-gradient-to-br from-blue-700 via-blue-500 to-accent-500 text-transparent bg-clip-text animate-gradient bg-300% font-bold"
+          class="bg-gradient-to-r from-blue-500 via-blue-600 to-blue-800 text-transparent bg-clip-text font-bold"
           >AI Expert Assistant</span
         > to Every <span
-          class="bg-gradient-to-br from-blue-700 via-blue-500 to-accent-500 text-transparent bg-clip-text animate-gradient bg-300% font-bold"
+          class="bg-gradient-to-r from-blue-500 via-blue-600 to-blue-800 text-transparent bg-clip-text font-bold"
           >Product Page</span
         >
       </h2>
