--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -5,13 +5,13 @@ const featuresList = [
   {
     title: "Product Expert",
     description:
-      "Add an AI assistant to every product page that answers customer questions instantly.",
+      "Add an AI assistant to product pages that answers customer questions instantly.",
     icon: MessageSquare,
   },
   {
     title: "Analytics Dashboard",
     description:
-      "Gain product insights from customer questions and make data-driven A/B testing decisions.",
+      "Gain product insights from customer questions and make data-driven decisions.",
     icon: BarChart2,
   },
   {
@@ -24,7 +24,8 @@ const featuresList = [
 ---
 
 <section class="overflow-hidden">
-  <!-- <div class="px-8 pt-24 pb-16 mx-auto md:px-12 lg:px-32 max-w-7xl relative"> -->
+  {
+    /* Banner - Commented out for now
   <div class="bg-accent-600">
     <div class="px-8 py-3 mx-auto md:px-12 lg:px-32 max-w-7xl">
       <p class="text-sm text-center font-medium text-white">
@@ -36,15 +37,33 @@ const featuresList = [
       </p>
     </div>
   </div>
-  <div class="px-8 pt-16 pb-16 mx-auto md:px-12 lg:px-32 max-w-7xl relative">
+  */
+  }
+  <div class="px-8 pt-12 pb-16 mx-auto md:px-12 lg:px-32 max-w-7xl relative">
     <div class="max-w-3xl text-center mx-auto lg:text-balance">
       {
         /* <p class="text-base leading-normal font-bold uppercase text-accent-600">
         ECOMMERCE CUSTOMER INTELLIGENCE
       </p> */
       }
+      <div
+        class="flex flex-wrap items-center gap-6 justify-center mx-auto mb-10"
+      >
+        <a
+          href="#pricing"
+          class="flex items-center justify-center transition-all duration-200 text-accent-500 hover:text-accent-600 bg-accent-50/50 hover:bg-accent-50 h-[30px] px-4 text-xs font-medium rounded-full"
+        >
+          Get Started Free
+        </a>
+        <a
+          href="#demo"
+          class="flex items-center justify-center transition-all duration-200 text-base-400 hover:text-base-500 bg-base-50/50 hover:bg-base-50 h-[30px] px-4 text-xs font-medium rounded-full"
+        >
+          See Demo
+        </a>
+      </div>
       <h2
-        class="text-2xl leading-tight tracking-tight sm:text-3xl md:text-4xl lg:text-5xl xl:text-6xl mt-16 font-semibold text-base-900"
+        class="text-2xl leading-tight tracking-tight sm:text-3xl md:text-4xl lg:text-5xl xl:text-6xl font-semibold text-base-900"
       >
         Add an <span
           class="bg-gradient-to-r from-blue-500 via-blue-600 to-blue-800 text-transparent bg-clip-text font-bold"
@@ -54,42 +73,24 @@ const featuresList = [
           >Product Page</span
         >
       </h2>
-      <p
-        class="text-lg sm:text-xl leading-relaxed mt-8 text-base-500 font-medium max-w-2xl mx-auto"
-      >
-        Help customers make confident buying decisions with an AI assistant that
-        knows your products inside and out. Get valuable customer insights.
-      </p>
       <div
-        class="flex flex-wrap items-center gap-3 justify-center mx-auto mt-12"
+        class="h-1 w-24 mx-auto mt-6 rounded-full bg-gradient-to-r from-blue-500/40 via-blue-600/40 to-blue-800/40"
       >
-        <a
-          href="#pricing"
-          class="flex items-center justify-center transition-all duration-200 focus:ring-2 focus:outline-none text-white bg-accent-600 hover:bg-accent-700 focus:ring-accent-500/50 h-9 px-4 py-2 text-sm font-medium rounded-md"
-        >
-          Get Started Free
-        </a>
-        <a
-          href="#demo"
-          class="flex items-center justify-center transition-all duration-200 focus:ring-2 focus:outline-none text-base-500 bg-white hover:text-accent-500 ring-1 ring-base-200 focus:ring-accent-500 h-9 px-4 py-2 text-sm font-medium rounded-md"
-        >
-          See Demo
-        </a>
+      </div>
+      <div
+        class="grid grid-cols-1 sm:grid-cols-3 gap-x-8 gap-y-8 mt-[52px] mb-4 max-w-3xl mx-auto"
+      >
+        {
+          featuresList.map(({ title, description, icon: Icon }) => (
+            <div class="text-base-500 flex flex-col items-center text-sm">
+              <Icon className="w-5 h-5 mb-2 text-accent-600" />
+              <strong class="text-base-700 mb-1">{title}</strong>
+              {description}
+            </div>
+          ))
+        }
       </div>
     </div>
-    <dl
-      class="lg:gap-x-8 lg:grid-cols-3 max-w-4xl mt-24 mx-auto sm:gap-x-6 sm:gap-y-12 sm:grid sm:grid-cols-2 sm:space-y-0 space-y-6 text-center text-sm items-start"
-    >
-      {
-        featuresList.map(({ title, description, icon: Icon }) => (
-          <div class="text-base-500 lg:text-balance flex flex-col items-center">
-            <Icon className="w-6 h-6 mb-2 text-accent-600" />
-            <strong class="text-base-700 mb-1">{title}</strong>
-            {description}
-          </div>
-        ))
-      }
-    </dl>
     <div class="relative w-full mx-auto max-w-7xl items-center py-12 pb-12">
       <img
         alt="ProductGenie AI Assistant"
